<resources>
    <string name="app_name">Better Battle Ship</string>
    <string name="computer_played">Computer Finished his turn</string>
    <string name="players_turn">Your Turn</string>
    <string name="computers_turn">Computers Turn</string>
    <string name="num_enemy_ships">Enemys Ships: %d </string>
    <string name="num_human_ships">Your Ships: %d</string>
    <string name="home">Home</string>
    <string name="play_again">Play Again</string>
    <string name="winner">Winner!</string>
    <string name="game_over">Game Over!</string>
    <string name="your_board">Your Board</string>
    <string name="enemy_board">Enemys Board</string>
    <string name="welcome">BattleShip</string>
    <string name="choose_level">Choose Level:</string>
    <string name="easy_level">Easy</string>
    <string name="normal_level">Normal</string>
    <string name="hard_level">Hard</string>
    <string name="play_btn">PLAY!</string>
    <string name="show_high_scores">High Scores</string>
    <string name="btn_back">Back</string>
    <string name="btn_easy_table">Top 10 Easy Table</string>
    <string name="btn_normal_table">Top 10 Normal Table</string>
    <string name="btn_hard_table">Top 10 Hard Table</string>
    <string name="top_ten_easy_table">Top 10 - Easy Table</string>
    <string name="top_ten_normal_table">Top 10 - Normal Table</string>
    <string name="top_ten_hard_table">Top 10 - Hard Table</string>
    <string name="type_name_hint">Type Your Name</string>
    <string name="btn_insert_data">Insert</string>
    <string name="player_num_shots">Shots: %d</string>
    <string name="score">Your Score: %d</string>
    <string name="data_inserted">Saved</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="next_time">Maybe Next Time...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_db_table">Choose Table:</string>
    <string name="no_data_msg">No Data Yet</string>
    <string name="name_table">Name</string>
    <string name="score_table">Score</string>
    <string name="service">Service Sensor</string>
    <string name="warning">Return to original position</string>
    <string name="ship_relocated">A Ship Was Relocated</string>
    <string name="x">X</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
