<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battleship1"
    tools:context=".FragmentStart">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeToBattleshipGameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/hand"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/easy"
            android:textSize="70dp" />

        <TextView
            android:id="@+id/chooseDifficultyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeToBattleshipGameTxt"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/unique"
            android:text="@string/choose_level"
            android:textAlignment="center"
            android:textColor="@color/easy"
            android:textSize="30dp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseDifficultyTxt"
            android:id="@+id/rg"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/easyRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chooseDifficultyTxt"
                android:buttonTint="@color/easy"
                android:checked="true"
                android:gravity="center"
                android:background="@drawable/btn_easy2" />

            <RadioButton
                android:id="@+id/normalRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:buttonTint="@color/easy"
                android:gravity="center"
                android:paddingTop="15dp"
                android:background="@drawable/btn_medium2" />

            <RadioButton
                android:id="@+id/hardRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/normalRB"
                android:layout_centerHorizontal="true"
                android:buttonTint="@color/easy"
                android:background="@drawable/btn_hard"
                android:gravity="center"
                android:paddingTop="15dp" />

        </RadioGroup>

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/play_btn"
            android:textColor="@android:color/black"
            android:fontFamily="@font/chiller"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/highScore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/show_high_scores"
            android:textColor="@android:color/black"
            android:fontFamily="@font/chiller"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background="@drawable/bigbtn" />

    </RelativeLayout>

</FrameLayout>